3-GERACAO/sintatico.output
Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 lista_variaveis: T_IDENTIF lista_variaveis
   12                | T_IDENTIF

   13 lista_comandos: ε
   14               | comando lista_comandos

   15 comando: entrada_saida
   16        | atribuicao
   17        | selecao
   18        | repeticao

   19 entrada_saida: entrada
   20              | saida

   21 entrada: T_LEIA T_IDENTIF

   22 saida: T_ESCREVA expressao

   23 atribuicao: T_IDENTIF T_ATRIB expressao

   24 $@3: ε

   25 $@4: ε

   26 selecao: T_SE expressao T_ENTAO $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE

   27 $@5: ε

   28 $@6: ε

   29 $@7: ε

   30 repeticao: T_ENQUANTO $@5 expressao T_FACA $@6 lista_comandos T_FIMENQTO $@7

   31 expressao: expressao T_VEZES expressao
   32          | expressao T_MAIS expressao
   33          | expressao T_DIV expressao
   34          | expressao T_MENOS expressao
   35          | expressao T_MAIOR expressao
   36          | expressao T_MENOR expressao
   37          | expressao T_IGUAL expressao
   38          | expressao T_E expressao
   39          | expressao T_OU expressao
   40          | termo

   41 termo: T_IDENTIF
   42      | T_NUMERO
   43      | T_V
   44      | T_F
   45      | T_NAO termo
   46      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 11 12 21 23 41
    T_LEIA (262) 21
    T_ESCREVA (263) 22
    T_ENQUANTO (264) 30
    T_FACA (265) 30
    T_FIMENQTO (266) 30
    T_SE (267) 26
    T_ENTAO (268) 26
    T_SENAO (269) 26
    T_FIMSE (270) 26
    T_ATRIB (271) 23
    T_VEZES (272) 31
    T_DIV (273) 33
    T_MAIS (274) 32
    T_MENOS (275) 34
    T_MAIOR (276) 35
    T_MENOR (277) 36
    T_IGUAL (278) 37
    T_E (279) 38
    T_OU (280) 39
    T_V (281) 43
    T_F (282) 44
    T_NUMERO (283) 42
    T_NAO (284) 45
    T_ABRE (285) 46
    T_FECHA (286) 46
    T_LOGICO (287) 9
    T_INTEIRO (288) 10


Não terminais com as regras onde eles aparecem

    $accept (34)
        à esquerda: 0
    programa (35)
        à esquerda: 3
        à direita: 0
    $@1 (36)
        à esquerda: 1
        à direita: 3
    $@2 (37)
        à esquerda: 2
        à direita: 3
    cabecalho (38)
        à esquerda: 4
        à direita: 3
    variaveis (39)
        à esquerda: 5 6
        à direita: 3
    declaracao_variaveis (40)
        à esquerda: 7 8
        à direita: 6 7
    tipo (41)
        à esquerda: 9 10
        à direita: 7 8
    lista_variaveis (42)
        à esquerda: 11 12
        à direita: 7 8 11
    lista_comandos (43)
        à esquerda: 13 14
        à direita: 3 14 26 30
    comando (44)
        à esquerda: 15 16 17 18
        à direita: 14
    entrada_saida (45)
        à esquerda: 19 20
        à direita: 15
    entrada (46)
        à esquerda: 21
        à direita: 19
    saida (47)
        à esquerda: 22
        à direita: 20
    atribuicao (48)
        à esquerda: 23
        à direita: 16
    selecao (49)
        à esquerda: 26
        à direita: 17
    $@3 (50)
        à esquerda: 24
        à direita: 26
    $@4 (51)
        à esquerda: 25
        à direita: 26
    repeticao (52)
        à esquerda: 30
        à direita: 18
    $@5 (53)
        à esquerda: 27
        à direita: 30
    $@6 (54)
        à esquerda: 28
        à direita: 30
    $@7 (55)
        à esquerda: 29
        à direita: 30
    expressao (56)
        à esquerda: 31 32 33 34 35 36 37 38 39 40
        à direita: 22 23 26 30 31 32 33 34 35 36 37 38 39 46
    termo (57)
        à esquerda: 41 42 43 44 45 46
        à direita: 40 45


Estado 0

    0 $accept: • programa $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    programa   ir ao estado 2
    cabecalho  ir ao estado 3


Estado 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


Estado 2

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 5


Estado 3

    3 programa: cabecalho • variaveis $@1 T_INICIO lista_comandos T_FIM $@2

    T_LOGICO   deslocar, e ir ao estado 6
    T_INTEIRO  deslocar, e ir ao estado 7

    $padrão  reduzir usando a regra 5 (variaveis)

    variaveis             ir ao estado 8
    declaracao_variaveis  ir ao estado 9
    tipo                  ir ao estado 10


Estado 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $padrão  reduzir usando a regra 4 (cabecalho)


Estado 5

    0 $accept: programa $end •

    $padrão  aceitar


Estado 6

    9 tipo: T_LOGICO •

    $padrão  reduzir usando a regra 9 (tipo)


Estado 7

   10 tipo: T_INTEIRO •

    $padrão  reduzir usando a regra 10 (tipo)


Estado 8

    3 programa: cabecalho variaveis • $@1 T_INICIO lista_comandos T_FIM $@2

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 11


Estado 9

    6 variaveis: declaracao_variaveis •

    $padrão  reduzir usando a regra 6 (variaveis)


Estado 10

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 12

    lista_variaveis  ir ao estado 13


Estado 11

    3 programa: cabecalho variaveis $@1 • T_INICIO lista_comandos T_FIM $@2

    T_INICIO  deslocar, e ir ao estado 14


Estado 12

   11 lista_variaveis: T_IDENTIF • lista_variaveis
   12                | T_IDENTIF •

    T_IDENTIF  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 12 (lista_variaveis)

    lista_variaveis  ir ao estado 15


Estado 13

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •

    T_LOGICO   deslocar, e ir ao estado 6
    T_INTEIRO  deslocar, e ir ao estado 7

    $padrão  reduzir usando a regra 8 (declaracao_variaveis)

    declaracao_variaveis  ir ao estado 16
    tipo                  ir ao estado 10


Estado 14

    3 programa: cabecalho variaveis $@1 T_INICIO • lista_comandos T_FIM $@2

    T_IDENTIF   deslocar, e ir ao estado 17
    T_LEIA      deslocar, e ir ao estado 18
    T_ESCREVA   deslocar, e ir ao estado 19
    T_ENQUANTO  deslocar, e ir ao estado 20
    T_SE        deslocar, e ir ao estado 21

    $padrão  reduzir usando a regra 13 (lista_comandos)

    lista_comandos  ir ao estado 22
    comando         ir ao estado 23
    entrada_saida   ir ao estado 24
    entrada         ir ao estado 25
    saida           ir ao estado 26
    atribuicao      ir ao estado 27
    selecao         ir ao estado 28
    repeticao       ir ao estado 29


Estado 15

   11 lista_variaveis: T_IDENTIF lista_variaveis •

    $padrão  reduzir usando a regra 11 (lista_variaveis)


Estado 16

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $padrão  reduzir usando a regra 7 (declaracao_variaveis)


Estado 17

   23 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  deslocar, e ir ao estado 30


Estado 18

   21 entrada: T_LEIA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 31


Estado 19

   22 saida: T_ESCREVA • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 38
    termo      ir ao estado 39


Estado 20

   30 repeticao: T_ENQUANTO • $@5 expressao T_FACA $@6 lista_comandos T_FIMENQTO $@7

    $padrão  reduzir usando a regra 27 ($@5)

    $@5  ir ao estado 40


Estado 21

   26 selecao: T_SE • expressao T_ENTAO $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 41
    termo      ir ao estado 39


Estado 22

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos • T_FIM $@2

    T_FIM  deslocar, e ir ao estado 42


Estado 23

   14 lista_comandos: comando • lista_comandos

    T_IDENTIF   deslocar, e ir ao estado 17
    T_LEIA      deslocar, e ir ao estado 18
    T_ESCREVA   deslocar, e ir ao estado 19
    T_ENQUANTO  deslocar, e ir ao estado 20
    T_SE        deslocar, e ir ao estado 21

    $padrão  reduzir usando a regra 13 (lista_comandos)

    lista_comandos  ir ao estado 43
    comando         ir ao estado 23
    entrada_saida   ir ao estado 24
    entrada         ir ao estado 25
    saida           ir ao estado 26
    atribuicao      ir ao estado 27
    selecao         ir ao estado 28
    repeticao       ir ao estado 29


Estado 24

   15 comando: entrada_saida •

    $padrão  reduzir usando a regra 15 (comando)


Estado 25

   19 entrada_saida: entrada •

    $padrão  reduzir usando a regra 19 (entrada_saida)


Estado 26

   20 entrada_saida: saida •

    $padrão  reduzir usando a regra 20 (entrada_saida)


Estado 27

   16 comando: atribuicao •

    $padrão  reduzir usando a regra 16 (comando)


Estado 28

   17 comando: selecao •

    $padrão  reduzir usando a regra 17 (comando)


Estado 29

   18 comando: repeticao •

    $padrão  reduzir usando a regra 18 (comando)


Estado 30

   23 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 44
    termo      ir ao estado 39


Estado 31

   21 entrada: T_LEIA T_IDENTIF •

    $padrão  reduzir usando a regra 21 (entrada)


Estado 32

   41 termo: T_IDENTIF •

    $padrão  reduzir usando a regra 41 (termo)


Estado 33

   43 termo: T_V •

    $padrão  reduzir usando a regra 43 (termo)


Estado 34

   44 termo: T_F •

    $padrão  reduzir usando a regra 44 (termo)


Estado 35

   42 termo: T_NUMERO •

    $padrão  reduzir usando a regra 42 (termo)


Estado 36

   45 termo: T_NAO • termo

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    termo  ir ao estado 45


Estado 37

   46 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 46
    termo      ir ao estado 39


Estado 38

   22 saida: T_ESCREVA expressao •
   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 22 (saida)


Estado 39

   40 expressao: termo •

    $padrão  reduzir usando a regra 40 (expressao)


Estado 40

   30 repeticao: T_ENQUANTO $@5 • expressao T_FACA $@6 lista_comandos T_FIMENQTO $@7

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 56
    termo      ir ao estado 39


Estado 41

   26 selecao: T_SE expressao • T_ENTAO $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE
   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_ENTAO  deslocar, e ir ao estado 57
    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55


Estado 42

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM • $@2

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 58


Estado 43

   14 lista_comandos: comando lista_comandos •

    $padrão  reduzir usando a regra 14 (lista_comandos)


Estado 44

   23 atribuicao: T_IDENTIF T_ATRIB expressao •
   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 23 (atribuicao)


Estado 45

   45 termo: T_NAO termo •

    $padrão  reduzir usando a regra 45 (termo)


Estado 46

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao
   46 termo: T_ABRE expressao • T_FECHA

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55
    T_FECHA  deslocar, e ir ao estado 59


Estado 47

   31 expressao: expressao T_VEZES • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 60
    termo      ir ao estado 39


Estado 48

   33 expressao: expressao T_DIV • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 61
    termo      ir ao estado 39


Estado 49

   32 expressao: expressao T_MAIS • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 62
    termo      ir ao estado 39


Estado 50

   34 expressao: expressao T_MENOS • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 63
    termo      ir ao estado 39


Estado 51

   35 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 64
    termo      ir ao estado 39


Estado 52

   36 expressao: expressao T_MENOR • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 65
    termo      ir ao estado 39


Estado 53

   37 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 66
    termo      ir ao estado 39


Estado 54

   38 expressao: expressao T_E • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 67
    termo      ir ao estado 39


Estado 55

   39 expressao: expressao T_OU • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 68
    termo      ir ao estado 39


Estado 56

   30 repeticao: T_ENQUANTO $@5 expressao • T_FACA $@6 lista_comandos T_FIMENQTO $@7
   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_FACA   deslocar, e ir ao estado 69
    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55


Estado 57

   26 selecao: T_SE expressao T_ENTAO • $@3 lista_comandos T_SENAO $@4 lista_comandos T_FIMSE

    $padrão  reduzir usando a regra 24 ($@3)

    $@3  ir ao estado 70


Estado 58

    3 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM $@2 •

    $padrão  reduzir usando a regra 3 (programa)


Estado 59

   46 termo: T_ABRE expressao T_FECHA •

    $padrão  reduzir usando a regra 46 (termo)


Estado 60

   31 expressao: expressao • T_VEZES expressao
   31          | expressao T_VEZES expressao •
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 31 (expressao)


Estado 61

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   33          | expressao T_DIV expressao •
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 33 (expressao)


Estado 62

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   32          | expressao T_MAIS expressao •
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 32 (expressao)


Estado 63

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   34          | expressao T_MENOS expressao •
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 34 (expressao)


Estado 64

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   35          | expressao T_MAIOR expressao •
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 35 (expressao)


Estado 65

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   36          | expressao T_MENOR expressao •
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 36 (expressao)


Estado 66

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   37          | expressao T_IGUAL expressao •
   38          | expressao • T_E expressao
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 37 (expressao)


Estado 67

   31 expressao: expressao • T_VEZES expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_DIV expressao
   34          | expressao • T_MENOS expressao
   35          | expressao • T_MAIOR expressao
   36          | expressao • T_MENOR expressao
   37          | expressao • T_IGUAL expressao
   38          | expressao • T_E expressao
   38          | expressao T_E expressao •
   39          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 38 (expressao)


Estado 68
